# haskell.nix

./: .gitattributes  .gitignore  .gitmodules  .stack-to-nix.cache  .travis.yml  2019-nixcon-talk.org  404.html  BUGLOG  CLAUDE.md  COPYING  Cabal-install-folder.diff  Cabal2Nix.cabal  ChangeLog.md  README.md  README.org  architecture.html  architecture.md~  book.toml  bors.toml  build.nix  cabal.project  cabal.project.freeze  call-cabal-to-nix.nix  call-stack-to-nix.nix  cardano-sl-mingw32.nix  cardano-sl.nix  cardano-wallet-mingw32.nix  cardano-wallet.nix  changelog.html  changelog.md  ci-lib.nix  ci.nix  config.nix  default.nix  dev-architecture.md~  dimension.nix  flake.nix  hackage-db.nix  hackage-src.json  haskell-src-meta.nix  (+35 more)
.buildkite/: build.sh  fixed.nix  pipeline.yml  updates.yml
.github/: stale.yml
__hs__/: Test.hs  cabal.project  flake.nix  test.cabal
adding-new-ghc/: index.html
architecture/: index.html
asterius/: asterius.json  default.nix
builder/: Setup.ghcjs.hs  build-cabal-slice.nix  (+17 more)
lib/dummy-ghc-pkg-dump/: configure.ac  default.nix  script.jq
make-install-plan/make-install-plan/: cabal.project  make-install-plan.cabal
make-install-plan/make-install-plan/src/: Json.hs  Main.hs
make-install-plan/make-install-plan/tests/: Tests.hs
make-install-plan/make-install-plan/tests/golden/: test1.pkgs.nix
nix-tools/nix-tools/: LICENSE  nix-tools.cabal
nix-tools/nix-tools/cabal2nix/: Main.hs
nix-tools/nix-tools/hackage2nix/: Main.hs
nix-tools/nix-tools/lib/: Cabal2Nix.hs  Stack2nix.hs
nix-tools/nix-tools/lib-cabal2nix/: Cabal2Nix.hs
nix-tools/nix-tools/lib-cabal2nix/Cabal2Nix/: Util.hs
nix-tools/nix-tools/lib/NixTools/: Cache.hs
nix-tools/nix-tools/lib/Stack2nix/: Project.hs  Stack.hs
nix-tools/nix-tools/lib/StackRepos/: CLI.hs
nix-tools/nix-tools/lts2nix/: Main.hs
nix-tools/nix-tools/lts2nix/Cabal2Nix/: Plan.hs
nix-tools/nix-tools/make-install-plan/: Freeze.hs  MakeInstallPlan.hs  ProjectPlanOutput.hs
nix-tools/nix-tools/plan2nix/: Plan2Nix.hs
nix-tools/nix-tools/plan2nix/Plan2Nix/: CLI.hs  Plan.hs  Project.hs
nix-tools/nix-tools/setup-ghcjs/: Setup.hs
nix-tools/nix-tools/stack-repos/: Main.hs
nix-tools/nix-tools/stack2nix/: Main.hs
nix-tools/nix-tools/tests/: StackGhcOptionsTests.hs  StackParserTests.hs  StackProjectTests.hs  Tests.hs  Unit.hs
nix-tools/nix-tools/tests-hackage/: Main.hs
nix-tools/nix-tools/tests-stack-parser/: StackResolverTests.hs
nix-tools/nix-tools/tests/golden/: test1.pkgs.nix  test1.plan.json  test1.project
nix-tools/nix-tools/truncate-index/: Main.hs
templates/haskell-nix/: LICENSE  flake.nix  hello.cabal
templates/haskell-nix/nix/: hix.nix
test/backpack/: Main.hs  backpack.cabal  cabal.project  default.nix
test/backpack-one-inst/: backpack-one-inst.cabal  default.nix
test/backpack/Includes2/: default.nix
test/backpack/Includes2/plan/: pkgs.nix
test/backpack/Includes2/plan/.plan.nix/: Includes2.nix
test/backpack/Includes3/: default.nix
test/backpack/Includes3/plan/: default.nix  pkgs.nix
test/backpack/Includes3/plan/.plan.nix/: Includes3.nix
test/backpack/backpack-one-inst/: default.nix
test/backpack/backpack-two-insts/: TestMain.hs  backpack-two-insts.cabal  default.nix
test/backpack/backpack-two-insts/sig/: A.hsig
test/backpack/backpack-two-sigs/: backpack-two-sigs.cabal  default.nix
test/backpack/backpack-two-sigs/impl2/: ImplC.hs
test/backpack/backpack-two-sigs/sig/: B.hs
test/backpack/bkpcabal01/: default.nix
test/backpack/consumer/: Consumer.hs
test/backpack/exe/: Main.hs
test/backpack/impl/: Mod.hs
test/backpack/sig/: B.hs  Module.hsig
test/buildable-old/: ImplA.hs  buildable-test.cabal  buildable.cabal
test/builder-haddock/: TestHaddock.hs  default.nix  pkgs.nix  plan.nix  test-haddock.cabal  test-haddock.nix
test/builder-haddock/.plan.nix/: test-haddock.nix
test/c-ffi/: c-ffi.cabal  default.nix
test/c-ffi/cbits/: test.c
test/c-ffi/exe/: Main.hs
test/c-ffi/jsbits/: bindings.js
test/c-ffi/src/: Lib.hs
test/cabal-doctests/: cabal-doctests-test.cabal  default.nix
test/cabal-doctests/doctests/: Doctests.hs
test/cabal-doctests/src/: Lib.hs
test/cabal-project-repo/: cabal-project-repo.cabal  default.nix
test/check-datadir/: check-datadir.cabal  data-file.txt  default.nix  golden.txt
test/check-datadir/lib/: Lib.hs
test/check-datadir/test/: Main.hs
test/check-datadir/tool/: Tool.hs
test/compiler-nix-name/: Main.hs  compiler-nix-name.cabal  default.nix
test/embed-file/: CHANGELOG.md  LICENSE  default.nix  embed-file.cabal
test/embed-file/app/: Main.hs
test/exe-dlls/: default.nix  exe-dlls.cabal
test/exe-dlls/src/: Main.hs
test/exe-lib-dlls/: default.nix  exe-lib-dlls.cabal
test/exe-lib-dlls/exes/: Main.hs
test/exe-lib-dlls/src/: Lib.hs
test/exe-only/: default.nix  exe-only.cabal
test/ghc-lib-reinstallable/: cabal.nix  cabal.project  ghc-lib-reinstallable.cabal  stack-ghc9122.yaml  stack-ghc9123.yaml  stack-ghc9124.yaml  stack.nix
test/ghc-lib-reinstallable/app/: Main.hs
test/ghc-lib-reinstallable/src/: Lib.hs
test/ghc-options/: cabal.nix  cabal.project  stack.nix  stack.yaml  test-ghc-options.cabal
test/ghc-options/app/: Main.hs
test/ghc-options/src/: Lib.hs
test/ghcjs-overlay/: cabal.project  default.nix  ghcjs-overlay-test.cabal
test/gi-gtk/: default.nix  test-gi-gtk.cabal
test/gi-gtk/src/: Main.hs
test/githash/: default.nix  githash-test.cabal
test/githash/src/: Main.hs
test/js-template-haskell/: default.nix  js-template-haskell.cabal
test/js-template-haskell/src/: MyLib.hs
test/js-template-haskell/test/: Main.hs
test/literate-haskell/: default.nix  literate-haskell.cabal
test/literate-haskell/src/: MyLib.lhs
test/plugin/: default.nix  test.cabal
test/project-flags/: cabal.nix  cabal.project  stack.nix  stack.yaml  test-project-flags.cabal
test/project-flags/app/: Main.hs
test/project-flags/src/: Lib.hs
test/setup-deps-boot-cabal/: default.nix  setup-deps-boot-cabal.cabal
test/src-loc/: default.nix  src-loc.cabal
test/src-loc/src/: Main.hs
(+4284 files in other folders)
