name:                nix-tools
version:             0.1.0.0
synopsis:            cabal/stack to nix translation tools
description:         A set of tools to aid in trating stack and cabal projects into nix expressions.
license:             BSD3
license-file:        LICENSE
author:              Moritz Angermann
maintainer:          moritz.angermann@gmail.com
-- copyright:
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Cabal2Nix
                     , Cabal2Nix.Util
                     , Cabal2Nix.Plan
                     , Distribution.Nixpkgs.Fetch
  build-depends:       base >=4 && <4.13
                     , hnix
                     , aeson
                     , unordered-containers
                     , process
                     , deepseq
                     , transformers
                     , data-fix
                     , Cabal >= 2.4
                     , text
                     , filepath
                     , directory
                     , bytestring
                     , cryptohash-sha256
                     , base16-bytestring
                     , hpack
  hs-source-dirs:      lib
  default-language:    Haskell2010


executable cabal-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.13
                     , transformers
                     , bytestring
                     , hpack
                     , hnix
                     , text
                     , nix-tools
                     , filepath
                     , directory
                     , prettyprinter
  hs-source-dirs:      cabal2nix
  default-language:    Haskell2010

executable hashes-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.13
                     , hnix
                     , nix-tools
                     , data-fix
                     , aeson
                     , microlens
                     , microlens-aeson
                     , text
                     , filepath
                     , directory
  hs-source-dirs:      hashes2nix
  default-language:    Haskell2010

executable plan-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       Plan2Nix
                     , Plan2Nix.Cache
                     , Plan2Nix.CLI
                     , Plan2Nix.Project
                     , Plan2Nix.Plan
  build-depends:       base >=4 && <4.13
                     , nix-tools
                     , hnix
                     , Cabal >= 2.4
                     , text
                     , hpack
                     , unordered-containers
                     , vector
                     , aeson
                     , microlens
                     , microlens-aeson
                     , optparse-applicative
                     , prettyprinter
                     , filepath
                     , directory
                     , bytestring
                     , transformers
                     , extra
  hs-source-dirs:      plan2nix
  default-language:    Haskell2010

executable hackage-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.13
                     , nix-tools
                     , hackage-db
                     , hnix
                     , Cabal
                     , containers
                     , bytestring
                     , text
                     , cryptohash-sha256
                     , base16-bytestring
                     , filepath
                     , directory
                     , transformers
  hs-source-dirs:      hackage2nix
  default-language:    Haskell2010

executable lts-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.13
                     , nix-tools
                     , hnix
                     , yaml
                     , aeson
                     , microlens
                     , microlens-aeson
                     , text
                     , filepath
                     , directory
                     , unordered-containers
                     , Cabal
  hs-source-dirs:      lts2nix
  default-language:    Haskell2010

executable stack-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       Stack2nix
                     , Stack2nix.Cache
                     , Stack2nix.CLI
                     , Stack2nix.External.Resolve
                     , Stack2nix.Project
                     , Stack2nix.Stack
  build-depends:       base >=4 && <4.13
                     , nix-tools
                     , transformers
                     , hnix
                     , yaml
                     , aeson
                     , microlens
                     , microlens-aeson
                     , text
                     , Cabal
                     , vector
                     , prettyprinter
                     , directory
                     , filepath
                     , extra
                     , hpack
                     , bytestring
                     , optparse-applicative
                     , http-client-tls
                     , http-client
                     , http-types
                     , unordered-containers
  hs-source-dirs:      stack2nix
  default-language:    Haskell2010

executable truncate-index
  ghc-options:         -Wall
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base
                     , optparse-applicative
                     , zlib
                     , tar
                     , bytestring
                     , time
  hs-source-dirs:      truncate-index
  default-language:    Haskell2010
