name:                nix-tools
version:             0.1.0.0
synopsis:            cabal/stack to nix translation tools
description:         A set of tools to aid in trating stack and cabal projects into nix expressions.
license:             BSD3
license-file:        LICENSE
author:              Moritz Angermann
maintainer:          moritz.angermann@gmail.com
-- copyright:
category:            Distribution
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  ghc-options:         -Wall
  exposed-modules:     Cabal2Nix
                     , Cabal2Nix.Util
                     , Cabal2Nix.Plan
                     , CabalName
                     , CabalName.CLI
                     , Distribution.Nixpkgs.Fetch
                     , StackRepos
                     , StackRepos.CLI
                     , Stack2nix
                     , Stack2nix.Cache
                     , Stack2nix.CLI
                     , Stack2nix.External.Resolve
                     , Stack2nix.Project
                     , Stack2nix.Stack
  build-depends:       base >=4 && <4.15
                     , Cabal >= 3.4 && <3.5
                     , aeson
                     , aeson-pretty
                     , base16-bytestring
                     , bytestring
                     , cryptohash-sha256
                     , containers
                     , data-fix
                     , deepseq
                     , directory
                     , extra
                     , filepath
-- Needs https://github.com/input-output-hk/iohk-nix/commit/6a8c29117eff36ce975e02e01efc8b25d93fcb90#diff-6fb0c6517b547a8baf082d5d2d604842
-- to work with the data-dir issues when building components.
-- This commit is included since 0.6.5.
                     , hnix >= 0.6.5
                     , hpack
                     , http-client
                     , http-client-tls
                     , http-types
                     , optparse-applicative
                     , prettyprinter
                     , process
                     , text
                     , transformers
                     , unordered-containers
                     , yaml

  hs-source-dirs:      lib
  default-language:    Haskell2010


executable cabal-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.15
                     , transformers
                     , bytestring
                     , hpack
                     , hnix
                     , text
                     , nix-tools
                     , filepath
                     , directory
                     , prettyprinter
  hs-source-dirs:      cabal2nix
  default-language:    Haskell2010

executable hashes-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.15
                     , hnix
                     , nix-tools
                     , data-fix
                     , aeson
                     , microlens
                     , microlens-aeson
                     , text
                     , filepath
                     , directory
  hs-source-dirs:      hashes2nix
  default-language:    Haskell2010

executable plan-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  other-modules:       Plan2Nix
                     , Plan2Nix.Cache
                     , Plan2Nix.CLI
                     , Plan2Nix.Project
                     , Plan2Nix.Plan
  build-depends:       base >=4 && <4.15
                     , nix-tools
                     , hnix
                     , Cabal >= 2.4
                     , text
                     , hpack
                     , unordered-containers
                     , vector
                     , aeson
                     , microlens
                     , microlens-aeson
                     , optparse-applicative
                     , prettyprinter
                     , filepath
                     , directory
                     , bytestring
                     , transformers
                     , extra
  hs-source-dirs:      plan2nix
  default-language:    Haskell2010

executable hackage-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.15
                     , nix-tools
                     , hackage-db
                     , hnix
                     , Cabal
                     , aeson
                     , aeson-pretty
                     , containers
                     , bytestring
                     , text
                     , cryptohash-sha256
                     , base16-bytestring
                     , base64-bytestring
                     , filepath
                     , directory
                     , transformers
  hs-source-dirs:      hackage2nix
  default-language:    Haskell2010

executable lts-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.15
                     , nix-tools
                     , hnix
                     , yaml
                     , aeson
                     , microlens
                     , microlens-aeson
                     , text
                     , filepath
                     , directory
                     , unordered-containers
                     , vector
                     , Cabal
  hs-source-dirs:      lts2nix
  default-language:    Haskell2010

executable stack-to-nix
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.15
                     , nix-tools
  hs-source-dirs:      stack2nix
  default-language:    Haskell2010

executable truncate-index
  ghc-options:         -Wall
  main-is:             Main.hs
  -- other-modules:
  build-depends:       base
                     , optparse-applicative
                     , zlib
                     , tar
                     , bytestring
                     , time
  hs-source-dirs:      truncate-index
  default-language:    Haskell2010

executable stack-repos
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.15
                     , nix-tools
  hs-source-dirs:      stack-repos
  default-language:    Haskell2010

executable cabal-name
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base >=4 && <4.15
                     , nix-tools
  hs-source-dirs:      cabal-name
  default-language:    Haskell2010
