AC_INIT([The Glorious Glasgow Haskell Compilation System], [0.00], [glasgow-haskell-bugs@haskell.org], [ghc-AC_PACKAGE_VERSION])

AC_CONFIG_MACRO_DIRS([m4])

# Set this to YES for a released version, otherwise NO
: ${RELEASE=NO}

dnl ** Find unixy sort and find commands,
dnl ** which are needed by FP_SETUP_PROJECT_VERSION
FP_PROG_FIND
FP_PROG_SORT

FP_SETUP_PROJECT_VERSION
