cabal-version:       3.8
name:                make-install-plan
version:             0.1.0.0
synopsis:            Creates an install plan for a cabal project
license:             BSD-3-Clause
author:              Andrea Bedini
maintainer:          andrea@andreabedini.com
category:            Distribution
build-type:          Simple

executable make-install-plan
  main-is:             Main.hs
  other-modules:       Json
  build-depends:       base
                     , Cabal ^>=3.12
                     , Cabal-syntax ^>=3.12
                     , cabal-install ^>=3.12
                     , cabal-install-solver ^>=3.12
                     , bytestring
  hs-source-dirs:      src
  default-language:    Haskell2010
