cabal-version:       >=2.0

name:                backpack-one-inst
version:             0.1.0.0
license:             PublicDomain
author:              Evgenii Akentev
maintainer:          i@ak3n.com
build-type:          Simple

library sig
  hs-source-dirs: sig  
  signatures:      A
  exposed-modules: B
  default-language: Haskell2010
  build-depends:    base

library impl
  hs-source-dirs: impl
  exposed-modules: ImplA
  reexported-modules: ImplA as A
  default-language: Haskell2010
  build-depends:    base

executable main
  main-is:             Main.hs
  build-depends:       base, impl, sig
  default-language:    Haskell2010
