cabal-version:       2.2
name:                test-haddock
version:             0.1.0.0
license:             NONE
author:              Rodney Lorrimar
maintainer:          rodney.lorrimar@iohk.io

library
  exposed-modules:     TestHaddock
  other-modules:       Paths_test_haddock
  -- other-extensions:
  build-depends:       base ^>=4.11.1.0
                     , stm
  -- hs-source-dirs:
  default-language:    Haskell2010
