cabal-version:       >=1.10
name:                c-ffi
version:             0.1.0.0
license:             PublicDomain
author:              Hamish Mackenzie
maintainer:          Hamish.K.Mackenzie@gmail.com
build-type:          Simple

library
  exposed-modules:
    Lib
  c-sources:           cbits/test.c
  if os(ghcjs)
    js-sources:        jsbits/bindings.js
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010

executable c-ffi
  main-is:             Main.hs
  build-depends:       base
                     , c-ffi
  hs-source-dirs:      exe
  default-language:    Haskell2010
