cabal-version: 1.12

name:           cabal-doctests-test
version:        0.1.0.0
build-type:     Custom

custom-setup
 setup-depends:
   base >= 4 && <5,
   Cabal,
   cabal-doctest >= 1 && <1.1

library
  exposed-modules: Lib
  other-modules: Paths_cabal_doctests_test
  build-depends:
      base >=4.7 && <5,
      aeson
  default-language: Haskell2010

test-suite doctests
  type: exitcode-stdio-1.0
  main-is: Doctests.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , doctest
    , cabal-doctests-test
  default-language: Haskell2010
