cabal-version:   3.0
name:            cabal-project-repo
version:         0.1.0.0
license:         NONE
author:          andrea.bedini@tweag.io
maintainer:      Andrea Bedini
build-type:      Simple

executable cabal-project-repo
    main-is:          Main.hs
    build-depends:    base
                    , typed-protocols
    default-language: Haskell2010
