cabal-version:       >=1.10
name:                compiler-nix-name
version:             0.1.0.0
license:             PublicDomain
author:              Hamish Mackenzie
build-type:          Simple

executable compiler-nix-name
  main-is:             Main.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010
