cabal-version:      3.4
name:               embed-file
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Hamish Mackenzie
maintainer:         Hamish.K.Mackenzie@gmail.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable embed-file
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, file-embed, text
    hs-source-dirs:   app
    default-language: Haskell2010
