cabal-version:       >=1.10
name:                exe-dlls
version:             0.1.0.0
license:             PublicDomain
author:              Hamish Mackenzie
maintainer:          Hamish.K.Mackenzie@gmail.com
build-type:          Simple

executable exe-dlls
  build-depends:       base
                     , HsOpenSSL
                     , libsodium
                     , template-haskell
                     , text
                     , double-conversion
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
